--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@material-ui/core": "^4.12.4",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.0",
@@ -21,6 +22,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-lottie-player": "^2.0.0",
     "react-social-icons": "^5.13.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
