--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "styled-components": "^5.3.5",
     "three": "^0.140.2"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
