--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@lottiefiles/react-lottie-player": "^3.5.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/lab": "^7.0.1-beta.20",
+    "@mui/material": "^5.18.0",
     "@mui/styled-engine-sc": "^5.8.0",
     "@react-three/fiber": "^8.0.19",
     "emailjs-com": "^3.2.0",
