--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^5.5.0",
     "react-lottie-player": "^2.0.0",
-    "react-social-icons": "^5.13.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
     "three": "^0.140.2"
