--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@react-three/fiber": "^8.0.19",
     "emailjs-com": "^3.2.0",
+    "i18next": "^25.7.3",
     "next": "12.1.6",
+    "next-i18next": "^15.4.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-i18next": "^16.5.0",
     "react-icons": "^5.5.0",
     "react-lottie-player": "^2.0.0",
     "react-transition-group": "^4.4.2",
@@ -32,8 +35,8 @@
   },
   "devDependencies": {
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@types/react-transition-group": "^4.4.4",
     "@types/three": "^0.140.0",
     "autoprefixer": "^10.4.7",
